--- a/devfile.yml
+++ b/devfile.yml
@@ -1,6 +1,5 @@
-apiVersion: 1.0.0
-metadata:
-  name: apache-pig
+specVersion: 0.0.1
+name: apache-pig
 projects:
   -
     name: apache-pig-sample
@@ -11,7 +10,7 @@ components:
   -
     alias: apache-pig-plugin
     type: chePlugin
-    reference: https://raw.githubusercontent.com/tolusha/plugins-registry/master/plugins/tolusha/apache-pig-debug/0.0.1/meta.yaml
+    id: https://raw.githubusercontent.com/tolusha/plugins-registry/master/plugins/tolusha/apache-pig-debug/0.0.1
   -
     id: eclipse/che-theia/next
     type: cheEditor
